--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,14 +4,6 @@
     --stroke-color:rgba(0, 0, 0, 0.5);
     --contour-color: #000;
     --sparks-color: #FF0000;
-}
-
-
-.page {
-  background-attachment: fixed;
-  background-image:
-  repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
-  repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-  linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
-  background-size: cover;
+    --weight-subtitle: 700;
+    --weight-paragraph: 400;
 }
