--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,5 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
-:root /*.card__watermark*/ {
+:root {
     --text-shadows-color: 1px rgba(255, 255, 255, 0.5);
     --stroke-color:rgba(0, 0, 0, 0.5);
     --contour-color: #000;
