--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,6 @@
 
 .header__container {
   width: clamp(300px, 100%, 696px);
-  padding-inline: clamp(16px, 4vw, 48px);
   padding-block: clamp(128px, 5vw, 60px);
   text-align: center;
   border: 2px solid #000;
@@ -48,7 +47,7 @@
 .header__title {
   font-family: 'Press Start 2P', sans-serif;
   font-weight: 400;
-  font-size: 65px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   line-height: 100%;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -57,7 +56,7 @@
 .header__title-intro {
   font-family: 'Press Start 2P', sans-serif;
   font-weight: 400;
-  font-size: 23px;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   line-height: 100%;
   text-transform: uppercase;
 }
@@ -120,8 +119,7 @@
 }
 
 .card__image {
-  width: 696px;
-  height: 696px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
   display: block;
@@ -160,18 +158,18 @@
   background-color: transparent;
   border: none;
   padding: 0;
-  margin-right: 12px;
+  margin-right: 6px;
   display: flex;
   align-content: space-around;
   flex-wrap: wrap;
   outline: none;
   cursor: pointer;
+  transition: border 0.3s ease;
 }
 
 .card__icon-button:focus-visible {
   outline: none;
   border: 2px solid #000;
-  transition: box-shadow 0.3s ease;
 }
 
 .card__icon-button:focus {
@@ -272,7 +270,7 @@
   width: 130px;
   height: 38px;
 }
-/*card__like-button*/
+
 .button {
   display: flex;
   justify-content: center;
@@ -403,15 +401,6 @@ form {
 .dialog__form-button {
   padding: 6.5px 132.5px;
   text-transform: uppercase;
-  outline: none;
-  border: 2px solid #000;
-  background-color: #fff;
-}
-
-.dialog__form-button:focus-visible {
-  outline: none;
-  box-shadow: 2px 2px 0 #000;
-  transition: box-shadow 0.3s ease;
 }
 
 @media (width <= 376px) {
@@ -419,9 +408,8 @@ form {
     margin-top: 100px;
   }
   .header__container {
-    width: clamp(300px, 100%, 375px);
-    padding-block: clamp(120px, 5vw, 60px);
-    padding-inline: clamp(15px, 4vw, 48px);
+   width: clamp(300px, 100%, 375px);
+   padding-block: clamp(120px, 5vw, 60px);
   }
   .header__title {
     font-size: 49px;
@@ -440,10 +428,6 @@ form {
   .block-title {
     padding-top: 8px;
     padding-bottom: 6px;
-  }
-  .card__image {
-    width: 375px;
-    height: 375px;
   }
   .card__watermark {
     inset-inline-end: 13px;
